# test_ncnn

./: .gitignore  CMakeLists.txt  README.md  main.cpp
common/: CMakeLists.txt  common.cpp  common.h  visual_ops.cpp
lib/ncnn-20240410-macos-vulkan/glslang.framework/Versions/Current/Resources/: Info.plist
lib/ncnn-20240410-macos/ncnn.framework/Headers/ncnn/: platform.h
lib/ncnn-20240410-macos/openmp.framework/: openmp
lib/ncnn-20240410-macos/openmp.framework/Versions/A/Resources/: Info.plist
lib/opencv2.framework/Versions/Current/Headers/: cvconfig.h
lib/opencv2.framework/Versions/Current/Resources/: Info.plist
nanodet_plus/: CMakeLists.txt  nanodet.cpp  nanodet.h
real_esrgan/: CMakeLists.txt  realesrgan.cpp  realesrgan_ncnn.cpp
realsr/: CMakeLists.txt  df2k.ncnn.param  esrgan_anime.ncnn.param  realsr.cpp  realsr.h  realsr_ncnn.cpp
sherpa/: CMakeLists.txt  decoder_jit_trace-pnnx.ncnn.param  encoder_jit_trace-pnnx.ncnn.param  joiner_jit_trace-pnnx.ncnn.param  libkaldi-native-fbank-core.dylib  sherpa_ncnn.cpp
sherpa/c-api/: CMakeLists.txt  c-api.cc
sherpa/csrc/: CMakeLists.txt
sherpa/sherpa-ncnn/: libkaldi-native-fbank-core.dylib  libsherpa-ncnn-c-api.dylib  libsherpa-ncnn-core.dylib  libsherpa-ncnn-portaudio.dylib
yolo-nas/: CMakeLists.txt  yolo-nas-s.ncnn.param  yolo_nas_ncnn.cpp  yolo_nas_s-sim-opt-fp16.param
yolov5/: yolov5_ncnn.cpp
yolov5-seg/: CMakeLists.txt  yolov5_seg_ncnn.cpp  yolov5n-seg-sim-opt-fp16.param  yolov5n-seg.ncnn.param  yolov5s-seg.ncnn.param
yolov8/: CMakeLists.txt  yolov8_ncnn.cpp  yolov8n.ncnn.param
yolov8-pose/: CMakeLists.txt  yolov8_pose_ncnn.cpp  yolov8n-pose-sim-opt.param  yolov8n-pose.ncnn.param
yolov8-seg/: CMakeLists.txt  yolov8_seg_ncnn.cpp  yolov8n-seg.ncnn.param
