aux_source_directory(. yolo_nas)
#set(OpenCV_DIR ${CMAKE_SOURCE_DIR}/../libs/opencv-mobile-4.5.4-android/sdk/native/jni)
find_package(OpenCV REQUIRED core imgproc highgui)
find_package(ncnn REQUIRED)
add_library(yolo_nas_lib ${yolo_nas})
target_link_libraries(yolo_nas_lib ${OpenCV_LIBS})
target_link_libraries(yolo_nas_lib ncnn)
